Fixed weather alignment in Weather.js

--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -7,3 +7,18 @@
     border-radius: 10px;
     background: whitesmoke;
 }
+
+.function-button-todo {
+    background: whitesmoke;
+  color: white;
+  border-radius: 90px;
+  cursor: pointer;
+  padding: 4px 6px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  border: none;
+  vertical-align: middle;
+  transition: box-shadow 0.4s ease;
+  width: 6vw;
+  border:2px solid #2F3E46;
+  margin: 0 auto 5px;
+}
