--- a/src/styles/weather.css
+++ b/src/styles/weather.css
@@ -1,6 +1,18 @@
 
 .weather-container {
-    margin: 2vh 3vh 6vh 3vh;
+    margin: 0 auto;
+    margin-bottom: 2vh;
+    padding: 8px;
+    width: 90%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 10px;
+    transition: 0.3s;
+    background: whitesmoke;
+}
+
+.weather-container-wc2 {
+    margin: 0 auto;
+    margin-bottom: 10vh;
     padding: 8px;
     width: 90%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
